# rotator-cli

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
rotator_cli/: __init__.py  homebrew_formula.rb  main.py  orientation_model.py
